--- a/staticman.yml
+++ b/staticman.yml
@@ -7,7 +7,7 @@ comments:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ["name", "email", "url", "message"]
+  allowedFields: ['title', 'description', 'biotools', 'website', 'doi']
 
   # (*) REQUIRED
   #
@@ -65,11 +65,11 @@ comments:
   # (*) REQUIRED
   #
   # Destination path (directory) for the data files. Accepts placeholders.
-  path: "_data/biotools/{options.slug}"
+  path: "_data/biotools"
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["name", "email", "message"]
+  requiredFields: ['title', 'description', 'biotools', 'website', 'doi']
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
