--- a/staticman.yml
+++ b/staticman.yml
@@ -16,7 +16,7 @@ biotools:
   branch: "master"
 
   # Text to use as the commit message or pull request title. Accepts placeholders.
-  commitMessage: "Add Staticman data"
+  commitMessage: "Hey human, here is a new biotool entry."
 
   # (*) REQUIRED
   #
@@ -40,7 +40,8 @@ biotools:
   # Whether entries need to be appproved before they are published to the main
   # branch. If set to `true`, a pull request will be created for your approval.
   # Otherwise, entries will be published to the main branch automatically.
-  moderation: true
+  #moderation: true
+  moderation: false
 
   # Name of the site. Used in notification emails.
   name: "eduardoboucas.com"
@@ -73,5 +74,5 @@ biotools:
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
-  transforms:
-    email: md5
+  #transforms:
+  #  email: md5
