--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Biotools - A Staticman sample page
+title: Biotools Entry - A Staticman sample page
 email: your-email@domain.com
 description: Test
 baseurl: "" # the subpath of your site, e.g. /blog/
