--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Biotools Entry - A Staticman sample page
 email: your-email@domain.com
 description: Test
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://127.0.0.1:4000/" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  ValentinMarcon
 movieFormUrl: https://staticman.net/api/v1/entries/5622d244c4bf944a1a3e3001
@@ -11,14 +11,3 @@ movieFormUrl: https://staticman.net/api/v1/entries/5622d244c4bf944a1a3e3001
 # Build settings
 markdown: kramdown
 
-# Staticman
-staticman:
- allowedFields: ['title', 'description', 'biotools', 'website', 'doi']
- branch: master
- commitMessage: "Hey human, here is a new entry."
- filename: "entry{@timestamp}"
- format: yml
- moderation: true
- path: "_data/biotools"
- requiredFields: ['title', 'description', 'biotools', 'website', 'doi']
- baseurl: "https://github.com/ValentinMarcon/staticman_test"
