--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ markdown: kramdown
 # Staticman
 staticman:
  allowedFields: ['title', 'description', 'biotools', 'website', 'doi']
- branch: master
+ branch: dev
  commitMessage: "Hey human, here is a new entry."
  filename: "entry{@timestamp}"
  format: yml
