--- a/staticman.yml
+++ b/staticman.yml
@@ -13,7 +13,7 @@ biotools:
   #
   # Name of the branch being used. Must match the one sent in the URL of the
   # request.
-  branch: "master"
+  branch: "dev"
 
   # Text to use as the commit message or pull request title. Accepts placeholders.
   commitMessage: "Hey human, here is a new biotool entry."
