--- a/staticman.yml
+++ b/staticman.yml
@@ -7,7 +7,7 @@ biotools:
   #
   # Names of the fields the form is allowed to submit. If a field that is
   # not here is part of the request, an error will be thrown.
-  allowedFields: ['name', 'description', 'biotools', 'website', 'doi']
+  allowedFields: ['name', 'description', 'biotoolsid', 'homepage', 'doi']
 
   # (*) REQUIRED
   #
@@ -70,7 +70,7 @@ biotools:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ['name', 'description', 'biotools', 'website', 'doi']
+  requiredFields: ['name', 'description', 'biotoolsid', 'homepage', 'doi']
 
   # List of transformations to apply to any of the fields supplied. Keys are
   # the name of the field and values are possible transformation types.
